# pixi-codespaces-test

./: README.md  pyproject.toml  test.ipynb  test.py
.devcontainer/: devcontainer.json
