[project]
authors = [{name = "Scott Henderson", email = "scottyhq@gmail.com"}]
dependencies = ["maxar-platform==1.0.2a2"]
description = "Add a short description here"
name = "pixi-codespaces-test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
pixi_codespaces_test = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.target.linux-64.dependencies]
ipykernel = ">=6.29.5,<7"
pystac-client = ">=0.8.3,<0.9"
